kqed_dev4/src/objects/Interaction__c.object
<CustomObject>
    <description>Will capture all the internal and the external attendees for any event.</description>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <description>The date/time the Interaction Occurred</description>
        <inlineHelpText>The date/time the Interaction Occurred</inlineHelpText>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>General__c</fullName>
        <description>Text field for general comments</description>
        <inlineHelpText>Text field for general comments</inlineHelpText>
        <label>General</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Significant__c</fullName>
        <description>Text field for significant comments</description>
        <inlineHelpText>Significant Comments</inlineHelpText>
        <label>Significant</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>The summary text for the Interaction</description>
        <inlineHelpText>The summary text for the Interaction</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agenda</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>